@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- https://zh.wikipedia.org/wiki/南京地铁 -->
 <tube name="南京地铁">
-  <!-- https://zh.wikipedia.org/wiki/南京地铁 -->
+  <lines>
+    <line id="1" name="南京地铁1号线" color="blue"/>
+    <line id="2" name="南京地铁2号线" color="red"/>
+    <line id="10" name="南京地铁10号线" color="beige"/>
+    <line id="S1" name="宁高城际轨道交通" color="cyan"/>
+    <line id="S2" name="宁天城际轨道交通" color="orange"/>
+  </lines>
   <stations>
     <!-- Junctions -->
     <station id="新街口" name="新街口" line="南京地铁1号线,南京地铁2号线" link="1-07,1-09,2-10,2-12"/>
